Fix alignment of navbar

--- a/src/styles/tailwind-include.css
+++ b/src/styles/tailwind-include.css
@@ -105,10 +105,7 @@ main a {
 
 nav.desktop a {
   color: var(--bodyTextColor);
-  margin-left: 30px;
-}
-nav.desktop a:first-child {
-  margin-left: 0;
+  margin: 0 16px;
 }
 nav.desktop a:hover,
 nav.desktop a.active {
